--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
-  justify-content: center;
   vertical-align: middle;
 }
 
@@ -11,26 +10,31 @@ body {
 }
 .container {
   display: flex;
+  width: 100%;
+  height: 100%;
+  margin-left: 30px;
   /*flex-wrap: wrap;*/
 }
 
+/* ---------------------------*/
 /* Seccion Lateral Izquierdo */
+/* ---------------------------*/
 .sideLeft {
   width: 459px;
-  height: 1023px;
+  height: 860px;
   background-color: #1e213a;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .otherLocations {
   padding-top: 42px;
-  padding-left: 56px;
+  padding-left: 50px;
 }
 
 .sectionSearchLocation {
   width: 450px;
-  height: 10%;
+  height: 50px;
   padding: 0;
   margin: 0;
   display: flex;
@@ -40,7 +44,6 @@ body {
 .btnSearchLocation {
   width: 161px;
   height: 40px;
-  padding-top: 0px;
   font-size: 16px;
   background-color: #6e707a;
   color: white;
@@ -49,13 +52,12 @@ body {
 
 .myLocation {
   padding-top: 42px;
-  padding-right: 35px;
+  padding-right: 40px;
 }
 
 .btnMyLocation {
   width: 40px;
   height: 40px;
-  padding-top: 0px;
   cursor: pointer;
   background-color: #6e707a;
   box-shadow: #000000 25%;
@@ -66,6 +68,7 @@ body {
 .imgTimeStatus {
   width: 450px;
   height: 234px;
+  margin-top: calc(181px - 50px);
   display: flex;
 }
 
@@ -78,10 +81,10 @@ body {
 .statusTemperature {
   width: 450px;
   height: 180px;
+  margin-top: calc(430px - (181px + 234px));
   display: flex;
-  text-align: center;
   align-items: center;
-  flex-wrap: nowrap;
+  justify-content: center;
 }
 
 .statusTemperature > h1 {
@@ -101,6 +104,7 @@ body {
 .statusClima{
   width: 450px;
   height: 50px;
+  margin-top: 40px;
   font-weight: 600;
   display: flex;
   justify-content: center;
@@ -118,6 +122,7 @@ body {
 .txtDate {
   width: 450px;
   height: 25px;
+  margin-top: 60px;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -132,11 +137,12 @@ body {
 }
 
 
-
+/* ---------------------------*/
 /* Seccion Principal */
+/* ---------------------------*/
 .sidePrincipal {
   width: 981px;
-  height: 1023px;
+  height: 860px;
   padding-left: 459px;
   rotate: -0;
   background-color: #100e1d;
