--- a/src/App.css
+++ b/src/App.css
@@ -87,12 +87,18 @@ body {
   position:absolute;
   z-index:1;
   margin-top: 0px;
-  margin-left: 0px;
   background-color: #1E213A;
+  color: #E7E7EB;
   /* background-color: red; */
   width: 459px;
   height: 690px;
-  color: #E7E7EB;
+  /* margin-left: -100%; */
+  animation: movingIn 0.8s ease;
+}
+
+@keyframes movingIn {
+  from{transform: transtaleX(50px); opacity: 0;}
+  to{transform: transtaleX(0px); opacity: 1;}
 }
 
 .sidebar li {
@@ -113,12 +119,13 @@ body {
 }
 
 .sidebar--open{
-  transform: translateX(100%);
+  /* margin-left: 0%; */
 }
 
 .closeSideBar {
   justify-content: right;
   text-align: right;
+  left: -100%;
 }
 
 .closeSideBar button {
@@ -130,6 +137,54 @@ body {
   box-shadow: #000000 25%;
   border: none;
   margin: 10px 20px;
+}
+
+.formSearchLocation{
+  width: 95%;
+  justify-content: space-between;
+  align-content: center;
+  text-align: center;
+}
+
+.inputSearchLocation {
+  width:65%;
+  height: 2.4em;
+  padding:3px 10px;
+  border:1px solid #f6f6f6;
+  border-radius:.375em;
+  background-color:#f6f6f6;
+  margin:8px 0;
+  display:inline-block;
+  text-align: center;
+}
+
+#btnSearch {
+  align-items: center;
+  appearance: none;
+  background-color: #6e707a;
+  border: 1px solid #6e707a;
+  border-radius: 0;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 16px;
+  width: 20%;
+  height: 2.4em;
+  justify-content: center;
+  line-height: 1;
+  padding: calc(.5em - 1px) 1em;
+  position: relative;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+  margin:8px 0;
+  margin-top: 8px;
+  margin-left: 4px;
 }
 
 .imgTimeStatus {
@@ -301,16 +356,41 @@ body {
 }
 
 .sectionPronostico {
-  position:relative;
   width: 890px;
   height: 180px;
   margin-top: 10px;
   margin-right: 20px;
-  flex-direction: row;
+  display: grid;
+  flex-direction: column;
   justify-content: space-between;
   justify-items: center;
   text-align: center;
-  background-color: white;
+  background-color: #100E1D;
+  gap: 0.4rem;
+}
+
+.divCards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 30 0;
+  min-width: 50vw;
+}
+
+.pronosticCards{
+  position: absolute;
+  padding: 5px 10px;
+  width: 120px;
+  height: 177px;
+  background-color: #1E213A;
+  color: #E7E7EB;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .seccionHightlightsText {
